Corrected the ODA driver's product name.  Its translated text will be provided soon when available.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -18,7 +18,7 @@ ResultSetMetaData.INVALID_COLUMN_INDEX=Invalid Column Index:
 
 DataTypes.TYPE_NAME_INVALID=Type Name Invalid:
 
-DataSetMetaData.PRODUCT_NAME=DTP ODA Flat File Sample Driver
+DataSetMetaData.PRODUCT_NAME=DTP ODA Flat File Data Source Provider
 
 Common.ARGUMENT_CANNOT_BE_NULL=Arguments cannot be null
 Common.CONNECTION_HAS_NOT_OPEN=Connection has not open
