Added several supporting classes for SQL Dev Tools M2I2

--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
@@ -2,3 +2,5 @@ DefaultDBFactory.product=Generic Database
 DefaultDBFactory.version=1.0
 DefaultDBFactory.description=Provides a portion of SQL 92 support
 NotSupportedConfigurationException.cause=The property {0} is not supported
+
+plugin.internal_error=Editor core plugin internal error
