M2 Iteration3: align with sql and debugger.core plugin

--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
@@ -4,3 +4,6 @@ DefaultDBFactory.description=Provides a portion of SQL 92 support
 NotSupportedConfigurationException.cause=The property {0} is not supported
 
 plugin.internal_error=Editor core plugin internal error
+
+ProcIdentifierImpl.map.cant.be.null=Map cannot be null
+ProcIdentifierImpl.invalid.identifier.string=Invalid identifier string
