--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
@@ -7,3 +7,6 @@ plugin.internal_error=Editor core plugin internal error
 
 ProcIdentifierImpl.map.cant.be.null=Map cannot be null
 ProcIdentifierImpl.invalid.identifier.string=Invalid identifier string
+
+DefaultDBFactory.vendor=Undefined
+DefaultDBFactory.version=x
