--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -1,25 +1,25 @@
 # Exception messages for the Oda Flat File Driver
 
-Connection.CONNECTION_PROPERTIES_MISSING=Connection Properties Missing
+Connection.CONNECTION_PROPERTIES_MISSING=Connection properties are missing.
 Connection.CANNOT_OPEN_FLAT_FILE_DB_DIR=Cannot open flat file database under directory: 
 
-Statement.COMMAND_IS_EMPTY=Command is empty
-Statement.DO_NOT_SUPPORT_CROSS_TABLE_QUERY=Do Not Support Cross Table Query
-Statement.COMMAND_NOT_VALID=Command is not valid
-Statement.ARGUMENT_ERROR=ArgumentError: the argument should be either 'NAME' or 'TYPE'
-Statement.IO_EXCEPTION=An I/O Exception occurs when program try to read file
+Statement.COMMAND_IS_EMPTY=Query command is empty.
+Statement.DO_NOT_SUPPORT_CROSS_TABLE_QUERY=Cross-table query is not supported.
+Statement.COMMAND_NOT_VALID=Query command is not valid.
+Statement.ARGUMENT_ERROR=The argument should be either 'NAME' or 'TYPE'.
+Statement.IO_EXCEPTION=An I/O Exception occurred when reading the file.
 Statement.SOURCE_DATA_ERROR=Source data error
 Statement.COLUMN_NAME_ERROR=Column name error
 
 ResultSet.COLUMN_NOT_FOUND=Column not found:
-ResultSet.CURSOR_HAS_NOT_BEEN_INITIALIZED=Cursor has not been initialized yet
+ResultSet.CURSOR_HAS_NOT_BEEN_INITIALIZED=Cursor has not been initialized yet.
 
-ResultSetMetaData.INVALID_COLUMN_INDEX=Invalid Column Index:
+ResultSetMetaData.INVALID_COLUMN_INDEX=Invalid column index:
 
-DataTypes.TYPE_NAME_INVALID=Type Name Invalid:
+DataTypes.TYPE_NAME_INVALID=Invalid type name:
 
 DataSetMetaData.PRODUCT_NAME=DTP ODA Flat File Data Source Provider
 
-Common.ARGUMENT_CANNOT_BE_NULL=Arguments cannot be null
-Common.CONNECTION_HAS_NOT_OPEN=Connection has not open
-Common.CANNOT_FIND_COLUMN=Cannot find any columns
+Common.ARGUMENT_CANNOT_BE_NULL=Arguments cannot be null.
+Common.CONNECTION_HAS_NOT_OPEN=Connection is not open.
+Common.CANNOT_FIND_COLUMN=Cannot find any columns.
