SQL Debugger framework M3I1

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
@@ -17,9 +17,6 @@ SPBreakpointPage.errorSaving=Error saving breakpoint information
 SPLaunchShortcut.selectNotSP=The selection is not a stored procedure.
 SPLaunchShortcut.selectNotEnableEvent=Cannot run a disabled event handler, please enable it first.
 SPBreakpointPage.procedureName=Procedure Name:
-SPModelPresentation.breakpoint=Breakpoint (invalid)
-SPModelPresentation.line=[line: {0}]
-SPModelPresentation.breakpointTextFail=Failed to get breakpoint label
 SPLineBreakpoint.invalidProcIdentifier=Invalid proc identifier 
 SPBreakpointPage.lineNumber=Line Number:
 SPDebugElement.notSupported=Not supported
@@ -28,13 +25,9 @@ SPBreakpointPage.enabledCondition=Enabled Condition
 SPBreakpointPropertiesRulerAction.label=Breakpoint Properties...
 SPBreakpointPage.failed.to.create.labels=failed to create labels
 SPBreakpointPage.failed.to.create.page=failed to create page
-SPModelPresentation.evaluateFailMessage=Failed to evaluate expression
-SPModelPresentation.getVariableInfoFail=Failed to get variable information
 SPBreakpointPage.enabled=Enabled
 SPLaunchShortcut.launchFailMessage=Launch failed: {0}
-SPModelPresentation.terminatedFlag=<terminated>
 SPLaunchShortcut.notStoreProcedure=Not a database object (store procedure) editor
-SPLaunchConfigurationDelegate.Launching=Launching
 SPLocalVariable.threadNotSuspended=Thread not suspended
 ManageBreakpointRulerAction.label=Toggle Breakpoint
 ManageBreakpointRulerAction.error=Error
@@ -43,19 +36,21 @@ EnableDisableBreakpointRulerAction.enableBreakpoint=Enable Breakpoint
 EnableDisableBreakpointRulerAction.error=Error
 EnableDisableBreakpointRulerAction.enableFailed=Enable breakpoint failed
 EnableDisableBreakpointRulerAction.disableBreakpoint=Disable Breakpoint
-SPModelPresentation.disconnectedFlag=<disconnected>
-SPModelPresentation.notRespondingFlag=<not_responding>
-SPModelPresentation.debugTarget=Debug target
 SPWatchExpressionDelegate.error=Watch evaluation error
 SPWatchExpressionDelegate.unsupported = {0} doesn't support watch fucntion
-SPModelPresentation.ERROR2="{0}" ERROR: {1}
-SPModelPresentation.breakpointUnknown=Breakpoint unknown
-SPModelPresentation.thread=Connection <error>
-BreakpointLocationVerifierJob.notValidLocation=Not valid location
-BreakpointLocationVerifierJob.breakpointRemoved=Breakpoint removed
-BreakpointLocationVerifierJob.breakpointSet=Breakpoint set
-BreakpointLocationVerifierJob.breakpointMovedToValid=Breakpoint moved to valid position
-BreakpointLocationVerifierJob.breakpoint.verification.fail=breakpoint verification fail
-BreakpointLocationVerifierJob.label=Breakpoint verification
 
-SPModelPresentation.errorGetEditorInput=Error get editor input
+AbstractControlConnection.connection.already.being.debugged=Connection {0} is already being debugged
+AbstractControlConnection.invalid.store.procedure.description=Invalid store procedure description
+
+SPLaunchConfigurationDelegate.Launching=Launching
+SPLaunchConfigurationDelegate.UnsupportedServerType=Unsupported server type: 
+SPLaunchConfigurationDelegate.notsupported=This mode is not supported yet!
+SPLaunchConfigurationDelegate.CreatingClientConn=Creating client connection
+SPLaunchConfigurationDelegate.AttachingConn=Attaching to connection
+SPLaunchConfigurationDelegate.NoPermission=Cannot debug. Maybe you do not have enough permission.
+SPLaunchConfigurationDelegate.CreatingDebugger=Creating debugger
+
+
+perspective.DebuggerPerspective.activeWinNull1=Failed to change perspective, as the active window could not be retrieved
+perspective.DebuggerPerspective.activeWinNull2=Failed to change perspective, still the active window could not be retrieved
+perspective.DebuggerPerspective.changePerspectiveException=Failed to change perspective
