SQL Editor framework M3I1

--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
@@ -10,3 +10,7 @@ ProcIdentifierImpl.invalid.identifier.string=Invalid identifier string
 
 DefaultDBFactory.vendor=Undefined
 DefaultDBFactory.version=x
+
+DefaultSQLSyntax.exception.splitSQL=Exception occurred while splitting sql: {0}
+
+
