Add visitor support

--- a/plugins/org.eclipse.datatools.sqltools.sql/src/org/eclipse/datatools/sqltools/sql/parser/util/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sql/src/org/eclipse/datatools/sqltools/sql/parser/util/messages.properties
@@ -29,3 +29,6 @@ ASAThread.stepFailed=Step failed
 ASTSQLStatement.alter.trigger= Alter Trigger
 ASTSQLStatement.create.index= Create Index
 ASTSQLStatement.alter.index= Alter Index
+
+SQLParser.unexpected.parser.error=Unexpected parser error
+SQLParser.syntax.error=Syntax error at line {0}, column {1}. Encountered: {2} 
