SQL Execution Plan View iteration 3 of M3

--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/ui/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/ui/actions/messages.properties
@@ -6,3 +6,17 @@ RemovePlanAction.remove.plan.name=Remove Plan
 RemovePlanAction.remove.plan.tooltip=Remove Current Plan
 RemoveAllPlansAction.remove.all.plans.name=Remove All Plans
 RemoveAllPlansAction.remove.all.plans.name.tooltip=Remove All Plans
+SavePlanAction.saveplan.title=Save Plans
+SavePlanAction.saveplan.tooltip=Save Plans to a File
+SavePlanAction.error=Error
+SavePlanAction.error.info=Failed to save plan to file.
+LoadPlanAction.title=Load Plans
+LoadPlanAction.tooltip=Load Plans from a File
+LoadPlanAction.info=Information
+LoadPlanAction.filenotfound=File not found
+LoadPlanAction.unknown.db=Unknown_database
+LoadPlanAction.error=Error
+LoadPlanAction.errorinfo=Failed to load plan from file.
+SavePlanAction.overwrite.q=The file ''{0}'' already exists. Do you want to replace the existing file?
+SavePlanAction.question=Question
+SavePlanAction.builder.error=Unable to create the XML document builder
