--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/preference/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/preference/messages.properties
@@ -1,3 +1,15 @@
 ExecutionPlanPage.orientation.group.name=SQL Execution Plan View Orientation
 ExecutionPlanPage.vertical.orientation=Vertical orientation
+ExecutionPlanPage.export.group=Export Encoding
+ExecutionPlanPage.default.enc=Default({0})
+ExecutionPlanPage.other.enc=Other:
 ExecutionPlanPage.horizontal.orientation=Horizontal orientation
+ExportFormatPage.fileencoding.otherencoding = Other:
+ExportFormatPage.fileencoding.numDefaultEncodings = 6
+ExportFormatPage.fileencoding.defaultEncoding1 = ISO-8859-1
+ExportFormatPage.fileencoding.defaultEncoding2 = UTF-8
+ExportFormatPage.fileencoding.defaultEncoding3 = UTF-16
+ExportFormatPage.fileencoding.defaultEncoding4 = UTF-16BE
+ExportFormatPage.fileencoding.defaultEncoding5 = UTF-16LE
+ExportFormatPage.fileencoding.defaultEncoding6 = US-ASCII
+ExportFormatPage.fileencoding.unsupportedEncoding = Unsupported Encoding
