[121885] Created the ODA Data Source Designer UI framework plug-in (oda.design.ui); refactored the exemplary oda.flatfile.ui implementation to extend from the new framework.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -1,6 +1,6 @@
 wizard.title.selectColumns=Select Columns
 wizard.title.selectFolder=Select Folder
-wizard.window.title=New Flat File Data Source
+wizard.window.title=New Flat File Data Source Profile
 wizard.defaultMessage.selectFolder=Select the folder that contains the flat files
 wizard.defaultMessage.selectFile=Select the file and the columns for the data set
 label.selectFolder=Select folder: 
