[126844] first cut at adding support for filtering.  added property pages for default filters on connection profile.  refactored base connection profile property pages.

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -166,3 +166,27 @@ _UI_DESCRIPTION_FOLDER = Enter or select the parent folder:
 _UI_DEFAULT_MSG_NEW_ALLOWED = &Enter or select the parent folder:
 _UI_DEFAULT_MSG_SELECT_ONLY = Select the folder:
 
+#
+## Filter Dialog
+#
+_UI_TITLE_FILTER = Specify Filter
+_UI_DESCRIPTION_FILTER = Specify a filter by selecting a predicate and entering a value or by indicating whether to include or exclude a selection of items.
+_UI_DESCRIPTION_SELECTION_ONLY = Specify a filter by indicating whether to include or exclude a selection of items.
+_UI_RADIO_BUTTON_EXPRESSION = &Expression
+_UI_LABEL_EXPRESSION = N&ame
+_UI_COMBO_STARTS_WITH = Starts with the characters
+_UI_COMBO_NOT_START_WITH = Does not start with the characters
+_UI_COMBO_CONTAINS = Contains the characters
+_UI_COMBO_NOT_CONTAIN = Does not contain the characters
+_UI_COMBO_ENDS_WITH = Ends with the characters
+_UI_COMBO_NOT_END_WITH = Does not end with the characters
+_UI_RADIO_BUTTON_SELECTION = Se&lection
+_UI_COMBO_INCLUDE_ITEMS = Include selected items
+_UI_COMBO_EXCLUDE_ITEMS = Exclude selected items
+_UI_BUTTON_SELECT_ALL = &Select All
+_UI_BUTTON_DESELECT_ALL = &Deselect All
+_UI_CHECKBOX_DISABLE_FILTER = D&isable filter
+_UI_MESSAGE_CRITERIA_REQUIRED = Please specify filtering criteria.
+_UI_MESSAGE_NO_QUOTES = The expression value must not contain quotes.
+_UI_MESSAGE_SELECTION_REQUIRED = Please select at least one item.
+
