Enable "Execute" function based on connectivity layer's latest change

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -40,3 +40,8 @@ ExplainSQLAction.tooltip=Explain SQL Execution Plan
 ExplainSQLActionDelegate.error.initview=Failed to initialize SQL Execution Plan view:
 ExplainSQLActionDelegate.error.proc.qp=Error occurs when getting query plan for procedural object
 
+ExecuteSQLActionDelegate.error.execute=Failed to execute SQL:
+ExecuteSQLActionDelegate.error.profile=Failed to get connection profile:
+ExecuteSQLActionDelegate.error.initview=Failed to initialize result view:
+ExecuteSQLActionDelegate.error.interrupted=The execution has been interrupted.
+
