--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
@@ -37,7 +37,7 @@ EnableDisableBreakpointRulerAction.error=Error
 EnableDisableBreakpointRulerAction.enableFailed=Enable breakpoint failed
 EnableDisableBreakpointRulerAction.disableBreakpoint=Disable Breakpoint
 SPWatchExpressionDelegate.error=Watch evaluation error
-SPWatchExpressionDelegate.unsupported = {0} doesn't support watch fucntion
+SPWatchExpressionDelegate.unsupported = {0} does not support watch fucntion
 
 AbstractControlConnection.connection.already.being.debugged=Connection {0} is already being debugged
 AbstractControlConnection.invalid.store.procedure.description=Invalid store procedure description
