[130352] externalize strings for connection management plug-ins

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -56,9 +56,11 @@ DriverListCombo.button.browse = ...
 
 DriverValidator.msg.missing_required_property = Required property in driver instance missing value: {0}
 DriverValidator.msg.jarfile_not_found = Unable to locate jar/zip in file system as specified by the driver instance: {0}
+DriverInstance.error.invalidClassPath=Invalid driver class path
 DriverValidator.msg.empty_jar_list = Empty jar list in driver instance.
 
 DriverValidator.msg.no_driver_selected = Define and select a driver from the drop-down list to continue.
+DriverInstance.error.jarListNotDefined=Invalid driver definition; JAR list not defined.
 
 NewDriverDialog.label.availableTemplates = Available Driver Templates
 NewDriverDialog.label.driverNameText = Driver Name:
