[130351]  Externalize Translatable Strings

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -135,7 +135,7 @@ DATATOOLS.SERVER.UI.BOOKMARK.TITLE=Add Bookmark
 DATATOOLS.SERVER.UI.BOOKMARK.MESSAGE=Enter Bookmark Name:
 
 
-
+SQL_MODEL_CONTENT_EXTENSION_LABEL=SQL Model Content
 
 
 
