[130357] Externalize Translatable Strings for all ODA plugins; added non-NLS markers as appropriate

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -23,3 +23,5 @@ DataSetMetaData.PRODUCT_NAME=DTP ODA Flat File Data Source Provider
 Common.ARGUMENT_CANNOT_BE_NULL=Arguments cannot be null.
 Common.CONNECTION_HAS_NOT_OPEN=Connection is not open.
 Common.CANNOT_FIND_COLUMN=Cannot find any columns.
+Query_streamClosed=Stream closed
+Query_invalidTableName=Invalid table name:
