[125799] ODA data set design session in the ODA UI design-time framework, for further integration with BIRT Data Set Editor.

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -31,3 +31,4 @@ manifest_missingDataSetElementId=A data set element id value is required.
 manifest_invalidDataSetElementId=Invalid dataSet element id ({0}).
 manifest_dataSetUi_missingPageId=A pageId value is required.
 manifest_dataSetUi_invalidPageId=Invalid pageId value ({0}).
+manifest_dataSetUi_missingElement=A {0} element is required in extension.
