--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -20,7 +20,7 @@ label.fileFilter=File filter:
 label.includeTypeLine=Use second line as data type indicator
 label.selectCharset=Select charset:
 error.selectFolder=Please select a valid folder.
-error.selectColumns=Please select some columns for this data set.
+error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
 error.errorExist=Error exists in the current page.  Would you like to save it anyway?
 error.noColumns=The selected file does not have any columns in it.
