[133806] Provides default implementation of the ODA Data Source Wizard and Property Page classes

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -32,3 +32,4 @@ manifest_invalidDataSetElementId=Invalid dataSet element id ({0}).
 manifest_dataSetUi_missingPageId=A pageId value is required.
 manifest_dataSetUi_invalidPageId=Invalid pageId value ({0}).
 manifest_dataSetUi_missingElement=A {0} element is required in extension.
+ui_defaultDataSourceTitle=Data Source Connection Properties
