--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -12,4 +12,38 @@
 #************************************************************************
 #
 logManager_duplicateName=Logger with same name exists.
+#
 manifest_nullArgument=Argument must not be null.
+manifest_NO_DRIVER_RUNTIME_CONFIGURATION_DEFINED=The ODA driver plugin.xml is missing a <dataSource> element.
+manifest_NO_DATA_SOURCE_EXTN_ID_DEFINED=The ODA driver plugin.xml data source extension is missing an id attribute.
+manifest_INVALID_VERSION_VALUE=The ODA driver plugin.xml has an invalid odaVersion value ({0}) in the data source extension ({1}).
+manifest_NO_DRIVER_CLASS_DEFINED=The ODA driver plugin.xml is missing a driverClass attribute in the data source extension ({0}).
+manifest_INVALID_SET_THREAD_CONTEXT_CLASSLOADER_VALUE=The ODA driver plugin.xml has an invalid setThreadContextClassLoader value ({0}) in the data source extension ({1}).
+manifest_NO_DATA_SET_TYPES_DEFINED=The ODA driver plugin.xml should have at least one <dataSet> defined for the data source extension ({0}).
+manifest_NO_DATA_SET_TYPE_ID_DEFINED=The ODA driver plugin.xml is missing an id attribute in a <dataSet> for the data source extension ({0}).
+manifest_NO_DATA_TYPE_MAPPINGS_DEFINED=The ODA driver plugin.xml should have at least one <dataTypeMapping> element defined for the <dataSet> ({0}).
+manifest_NO_NATIVE_TYPE_CODE_DEFINED=The ODA driver plugin.xml is missing a nativeDataTypeCode attribute in the <dataTypeMapping> ({0}) of the <dataSet> ({1}).
+manifest_INVALID_NATIVE_TYPE_CODE_VALUE=The ODA driver plugin.xml has an invalid nativeDataTypeCode value ({0}) in the <dataTypeMapping> ({1}) of the <dataSet> ({2}).
+manifest_NO_NATIVE_TYPE_NAME_DEFINED=The ODA driver plugin.xml is missing a nativeDataType attribute in the <dataTypeMapping> of the <dataSet> ({0}).
+manifest_NO_ODA_SCALAR_DATA_TYPE_DEFINED_1=The ODA driver plugin.xml is missing an odaScalarDataType attribute in the <dataTypeMapping> ({0}).
+manifest_NO_ODA_SCALAR_DATA_TYPE_DEFINED_2=The ODA driver plugin.xml is missing an odaScalarDataType attribute in the <alternativeOdaDataType> of the <dataTypeMapping> ({0}).
+manifest_INVALID_ODA_SCALAR_DATA_TYPE_VALUE=The ODA driver plugin.xml has an invalid odaScalarDataType value ({0}) in the <dataTypeMapping> ({1}).
+manifest_INVALID_LOG_LEVEL_VALUE=The ODA driver plugin.xml has an invalid logLevel value ({0}) in the data source extension ({1}).
+manifest_NO_LOG_FILENAME_PREFIX_DEFINED=The ODA driver plugin.xml is missing a logFileNamePrefix attribute in the <traceLogging> of the data source extension ({0}).
+#
+sortSpec_INVALID_SORT_MODE_SPECIFIED=Invalid sort mode specified: {0}.
+sortSpec_NULL_COLUMN_NAME_SPECIFIED=Null column name specified.
+sortSpec_INVALID_COLUMN_NAME_SPECIFIED=Invalid column name specified: {0}.
+sortSpec_INVALID_SORT_ORDER_SPECIFIED=Invalid sort order specified: {0}.
+sortSpec_NO_DYNAMIC_SORT_KEY_FOR_SORTMODENONE=This sortSpec with sortModeNone does not allow any dynamic sort key.
+sortSpec_ONE_SORTCOLUMN_FOR_SINGLE_COLUMN_MODE=A sort column already exists.  The sortModeSingleColumn mode allows a maximum of one dynamic sort column.
+sortSpec_ONE_SORTORDER_FOR_SINGLE_ORDER_MODE=The sortModeSingleOrder mode supports only one sort order.
+sortSpec_ONLY_IN_SINGLE_ORDER_MODE=Supported only in sortModeSingleOrder mode.
+#
+stringSubUtil_NO_STRING_VALUE_TO_REPLACE=No string value to replace: {0}.
+stringSubUtil_DELIMITER_CANNOT_BE_EMPTY=The delimiter cannot be an empty string or contain only white spaces.
+stringSubUtil_DELIMITER_CANNOT_BE_NULL="The delimiter cannot be null.
+stringSubUtil_SUBSTITUTION_LIST_CANNOT_BE_NULL=The string substitution list cannot be null.
+stringSubUtil_SUBSTITUTION_VALUE_CANNOT_BE_NULL=The string substitution value cannot be null.
+stringSubUtil_TEXT_STRING_CANNOT_BE_NULL=The text string cannot be null.
+stringSubUtil_NAME_VALUE_MAP_CANNOT_BE_NULL=The name-value map cannot be null.
