[131869] Preparation to migrate embedded resource messages to OSGi NLS message bundles

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -1,27 +1,40 @@
+#
+#************************************************************************
+# Copyright (c) 2004, 2006 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation - initial API and implementation
+#  
+#************************************************************************
+#
 # Exception messages for the Oda Flat File Driver
 
-Connection.CONNECTION_PROPERTIES_MISSING=Connection properties are missing.
-Connection.CANNOT_OPEN_FLAT_FILE_DB_DIR=Cannot open flat file database under directory: 
+connection_CONNECTION_PROPERTIES_MISSING=Connection properties are missing.
+connection_CANNOT_OPEN_FLAT_FILE_DB_DIR=Cannot open flat file database under directory: 
 
-Statement.COMMAND_IS_EMPTY=Query command is empty.
-Statement.DO_NOT_SUPPORT_CROSS_TABLE_QUERY=Cross-table query is not supported.
-Statement.COMMAND_NOT_VALID=Query command is not valid.
-Statement.ARGUMENT_ERROR=The argument should be either 'NAME' or 'TYPE'.
-Statement.IO_EXCEPTION=An I/O Exception occurred when reading the file.
-Statement.SOURCE_DATA_ERROR=Source data error
-Statement.COLUMN_NAME_ERROR=Column name error
+query_COMMAND_IS_EMPTY=Query command is empty.
+query_DO_NOT_SUPPORT_CROSS_TABLE_QUERY=Cross-table query is not supported.
+query_COMMAND_NOT_VALID=Query command is not valid.
+query_ARGUMENT_ERROR=The argument should be either 'NAME' or 'TYPE'.
+query_IO_EXCEPTION=An I/O Exception occurred when reading the file.
+query_SOURCE_DATA_ERROR=Source data error
+query_COLUMN_NAME_ERROR=Column name error
 
-ResultSet.COLUMN_NOT_FOUND=Column not found:
-ResultSet.CURSOR_HAS_NOT_BEEN_INITIALIZED=Cursor has not been initialized yet.
+resultSet_COLUMN_NOT_FOUND=Column not found:
+resultSet_CURSOR_HAS_NOT_BEEN_INITIALIZED=Cursor has not been initialized yet.
 
-ResultSetMetaData.INVALID_COLUMN_INDEX=Invalid column index:
+resultSetMetaData_INVALID_COLUMN_INDEX=Invalid column index:
 
-DataTypes.TYPE_NAME_INVALID=Invalid type name:
+dataTypes_TYPE_NAME_INVALID=Invalid type name:
 
-DataSetMetaData.PRODUCT_NAME=DTP ODA Flat File Data Source Provider
+dataSetMetaData_PRODUCT_NAME=DTP ODA Flat File Data Source Provider
 
-Common.ARGUMENT_CANNOT_BE_NULL=Arguments cannot be null.
-Common.CONNECTION_HAS_NOT_OPEN=Connection is not open.
-Common.CANNOT_FIND_COLUMN=Cannot find any columns.
-Query_streamClosed=Stream closed
-Query_invalidTableName=Invalid table name:
+common_ARGUMENT_CANNOT_BE_NULL=Arguments cannot be null.
+common_CONNECTION_HAS_NOT_OPEN=Connection is not open.
+common_CANNOT_FIND_COLUMN=Cannot find any columns.
+query_streamClosed=Stream closed
+query_invalidTableName=Invalid table name:
