[131869] Fixed message text

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -42,7 +42,7 @@ sortSpec_ONLY_IN_SINGLE_ORDER_MODE=Supported only in sortModeSingleOrder mode.
 #
 stringSubUtil_NO_STRING_VALUE_TO_REPLACE=No string value to replace: {0}.
 stringSubUtil_DELIMITER_CANNOT_BE_EMPTY=The delimiter cannot be an empty string or contain only white spaces.
-stringSubUtil_DELIMITER_CANNOT_BE_NULL="The delimiter cannot be null.
+stringSubUtil_DELIMITER_CANNOT_BE_NULL=The delimiter cannot be null.
 stringSubUtil_SUBSTITUTION_LIST_CANNOT_BE_NULL=The string substitution list cannot be null.
 stringSubUtil_SUBSTITUTION_VALUE_CANNOT_BE_NULL=The string substitution value cannot be null.
 stringSubUtil_TEXT_STRING_CANNOT_BE_NULL=The text string cannot be null.
