[135246] Supports the use of a custom driver bridge by an ODA consumer application

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -20,7 +20,7 @@ manifest_INVALID_VERSION_VALUE=The ODA driver plugin.xml has an invalid odaVersi
 manifest_NO_DRIVER_CLASS_DEFINED=The ODA driver plugin.xml is missing a driverClass attribute in the data source extension ({0}).
 manifest_INVALID_SET_THREAD_CONTEXT_CLASSLOADER_VALUE=The ODA driver plugin.xml has an invalid setThreadContextClassLoader value ({0}) in the data source extension ({1}).
 manifest_NO_DATA_SET_TYPES_DEFINED=The ODA driver plugin.xml should have at least one <dataSet> defined for the data source extension ({0}).
-manifest_NO_DATA_SET_TYPE_ID_DEFINED=The ODA driver plugin.xml is missing an id attribute in a <dataSet> for the data source extension ({0}).
+manifest_NO_ATTRIBUTE_ID_DEFINED=The ODA driver plugin extension is missing an attribute ({0}) in the ({1}) element.
 manifest_NO_DATA_TYPE_MAPPINGS_DEFINED=The ODA driver plugin.xml should have at least one <dataTypeMapping> element defined for the <dataSet> ({0}).
 manifest_NO_NATIVE_TYPE_CODE_DEFINED=The ODA driver plugin.xml is missing a nativeDataTypeCode attribute in the <dataTypeMapping> ({0}) of the <dataSet> ({1}).
 manifest_INVALID_NATIVE_TYPE_CODE_VALUE=The ODA driver plugin.xml has an invalid nativeDataTypeCode value ({0}) in the <dataTypeMapping> ({1}) of the <dataSet> ({2}).
