[135246] Refactored input of driver info to the ODA consumer's driver helper

--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
@@ -25,3 +25,4 @@ helper_maxConcurrentStatementsReached=Maximum active concurrent statements reach
 helper_prepareFailed=Prepare failed.
 helper_cannotGetResultSetMdBeforePrepare=Cannot get result set metadata before statement has been prepared.
 helper_cannotExecuteBeforePrepare=Cannot execute the statement before statement has been prepared.
+helper_missingDriverInfo=Missing ODA data source id or extension manifest.
