Fixed inconsistent error message text

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -27,7 +27,7 @@ designSession_invalidArgument=Invalid argument specified in design session metho
 designSession_invalidProfileName=Unable to locate the specified linked profile ({0}).
 designSession_missingDataSetUIElement=No dataSetUI element is defined for OdaDataSourceId ({0}) and OdaDataSetId ({1}).
 manifest_missingAttributeValue=Missing value in required attribute ({0}).
-manifest_missingDataSetElementId=A data set element id value is required.
+manifest_missingDataSetElementId=The dataSetElementID argument requires a value.
 manifest_invalidDataSetElementId=Invalid dataSet element id ({0}).
 manifest_dataSetUi_missingPageId=A pageId value is required.
 manifest_dataSetUi_invalidPageId=Invalid pageId value ({0}).
