[BZ136477 & BZ128766] Moves the DSE into a Connectivity view category and fixes refresh issues in the DSE for categories, profiles, and objects beneath profiles when connected.

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -23,6 +23,7 @@ DATATOOLS.SERVER.UI.EXPLORER.LAYOUT_OPTIONS = layout
 DATATOOLS.SERVER.UI.EXPLORER.VIRTUAL_FOLDER = Virtual Folder
 DATATOOLS.SERVER.UI.EXPLORER.HIERARCHICAL = Hierarchical
 DATATOOLS.SERVER.UI.EXPLORER.COLLAPSE_ALL = Collapse All
+DATATOOLS.SERVER.UI.EXPLORER.REFRESH = Ref&resh
 
 #
 ## Filtering Decoration
