[133806] Enhanced default implementation of the ODA Data Source Wizard Page and Property Page

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -33,3 +33,6 @@ manifest_dataSetUi_missingPageId=A pageId value is required.
 manifest_dataSetUi_invalidPageId=Invalid pageId value ({0}).
 manifest_dataSetUi_missingElement=A {0} element is required in extension.
 ui_defaultDataSourceTitle=Data Source Connection Properties
+ui_requiredFieldsMissingValue=One or more required fields (marked with '*') are missing a value.
+ui_errorLabel=Error
+ui_errorCreatingCustomCtrls=Error encountered in creating and initializing custom controls.
