--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/ui/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/ui/actions/messages.properties
@@ -1,22 +1,22 @@
-PlanDropDownAction.previous.plans=Previous Plans
-PlanDropDownAction.show.history=Show Plan History
-ShowPlansAction.previous.plan=Previous Plans
-ShowPlansAction.show.history=Show Plan History
-RemovePlanAction.remove.plan.name=Remove Plan
-RemovePlanAction.remove.plan.tooltip=Remove Current Plan
-RemoveAllPlansAction.remove.all.plans.name=Remove All Plans
-RemoveAllPlansAction.remove.all.plans.name.tooltip=Remove All Plans
-SavePlanAction.saveplan.title=Save Plans
-SavePlanAction.saveplan.tooltip=Save Plans to a File
-SavePlanAction.error=Error
-SavePlanAction.error.info=Failed to save plan to file.
-LoadPlanAction.title=Load Plans
-LoadPlanAction.tooltip=Load Plans from a File
-LoadPlanAction.info=Information
-LoadPlanAction.filenotfound=File not found
-LoadPlanAction.unknown.db=Unknown_database
-LoadPlanAction.error=Error
-LoadPlanAction.errorinfo=Failed to load plan from file.
-SavePlanAction.overwrite.q=The file ''{0}'' already exists. Do you want to replace the existing file?
-SavePlanAction.question=Question
-SavePlanAction.builder.error=Unable to create the XML document builder
+PlanDropDownAction_previous_plans=Previous Plans
+PlanDropDownAction_show_history=Show Plan History
+ShowPlansAction_previous_plan=Previous Plans
+ShowPlansAction_show_history=Show Plan History
+RemovePlanAction_remove_plan_name=Remove Plan
+RemovePlanAction_remove_plan_tooltip=Remove Current Plan
+RemoveAllPlansAction_remove_all_plans_name=Remove All Plans
+RemoveAllPlansAction_remove_all_plans_name_tooltip=Remove All Plans
+SavePlanAction_saveplan_title=Save Plans
+SavePlanAction_saveplan_tooltip=Save Plans to a File
+SavePlanAction_error=Error
+SavePlanAction_error_info=Failed to save plan to file.
+LoadPlanAction_title=Load Plans
+LoadPlanAction_tooltip=Load Plans from a File
+LoadPlanAction_info=Information
+LoadPlanAction_filenotfound=File not found
+LoadPlanAction_unknown_db=Unknown_database
+LoadPlanAction_error=Error
+LoadPlanAction_errorinfo=Failed to load plan from file.
+SavePlanAction_overwrite_q=The file ''{0}'' already exists. Do you want to replace the existing file?
+SavePlanAction_question=Question
+SavePlanAction_builder_error=Unable to create the XML document builder
