--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/util/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/util/messages.properties
@@ -1,2 +1,2 @@
-StatusLogger.no.bundle=No resource bundle has been set for the Logger
-StatusLogger.possible.args=\ possible args: {0}, {1}, {2}, {3}
+StatusLogger_no_bundle=No resource bundle has been set for the Logger
+StatusLogger_possible_args=\ possible args: {0}, {1}, {2}, {3}
