convert to eclipse 3.1 message bundle

--- a/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/util/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/util/messages.properties
@@ -1,2 +1,2 @@
-HTML2TextReader.listItemPrefix=\t- 
-HTMLTextPresenter.ellipse= ...
+HTML2TextReader_listItemPrefix=\t-
+HTMLTextPresenter_ellipse= ...
