--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/core/messages.properties
@@ -1,16 +1,13 @@
-DefaultDBFactory.product=Generic Database
-DefaultDBFactory.version=1.0
-DefaultDBFactory.description=Provides a portion of SQL 92 support
-NotSupportedConfigurationException.cause=The property {0} is not supported
+DefaultDBFactory_version=1.0
+NotSupportedConfigurationException_cause=The property {0} is not supported
 
-plugin.internal_error=Editor core plugin internal error
+plugin_internal_error=Editor core plugin internal error
 
-ProcIdentifierImpl.map.cant.be.null=Map cannot be null
-ProcIdentifierImpl.invalid.identifier.string=Invalid identifier string
+ProcIdentifierImpl_map_cant_be_null=Map cannot be null
+ProcIdentifierImpl_invalid_identifier_string=Invalid identifier string
 
-DefaultDBFactory.vendor=Undefined
-DefaultDBFactory.version=x
+DefaultDBFactory_vendor=Undefined
 
-DefaultSQLSyntax.exception.splitSQL=Exception occurred while splitting sql: {0}
+DefaultSQLSyntax_exception_splitSQL=Exception occurred while splitting sql: {0}
 
 
