--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
@@ -1,4 +1,4 @@
-ControlConnectionManager.unknownServerType=Can not determine the correct server type by the conection profile: {0}
+ControlConnectionManager_unknownServerType=Can not determine the correct server type by the conection profile: {0}
 
-AbstractControlConnection.connection.already.being.debugged=Connection {0} is already being debugged
-AbstractControlConnection.invalid.store.procedure.description=Invalid store procedure description
+AbstractControlConnection_connection_already_being_debugged=Connection {0} is already being debugged
+AbstractControlConnection_invalid_store_procedure_description=Invalid store procedure description
