--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -1,47 +1,47 @@
-common.error=Error
+common_error=Error
 
-CutAction.label= Cu&t
-CutAction.tooltip= Cut the Selected Text to the Clipboard
+CutAction_label= Cu&t
+CutAction_tooltip= Cut the Selected Text to the Clipboard
 
-CopyAction.label= &Copy
-CopyAction.tooltip= Copy the Selected Text to the Clipboard
+CopyAction_label= &Copy
+CopyAction_tooltip= Copy the Selected Text to the Clipboard
 
-CopyToClipboard.error.title= Problem Copying to Clipboard
-CollectionUtil.invalid.size=invalid size
-CopyToClipboard.error.message= There was a problem when accessing the system clipboard. Retry?
+CopyToClipboard_error_title= Problem Copying to Clipboard
+CollectionUtil_invalid_size=invalid size
+CopyToClipboard_error_message= There was a problem when accessing the system clipboard. Retry?
 
-DeleteAction.label=&Delete
-DeleteAction.0=Error while trying to delete node:
-DeleteAction.tooltip=Deletes the selected elements
-DeleteAction.confirm.title=Confirm Delete
-DeleteAction.confirm.message=Are you sure you want to delete?
+DeleteAction_label=&Delete
+DeleteAction_0=Error while trying to delete node:
+DeleteAction_tooltip=Deletes the selected elements
+DeleteAction_confirm_title=Confirm Delete
+DeleteAction_confirm_message=Are you sure you want to delete?
 
-PasteAction.label=&Paste
-PasteAction.1=Error while trying to paste:
-PasteAction.tooltip=Pastes elements from the clipboard
+PasteAction_label=&Paste
+PasteAction_1=Error while trying to paste:
+PasteAction_tooltip=Pastes elements from the clipboard
 
-ExecuteSQLAction.label=&Execute All
-ExecuteSQLAction.tooltip=Execute All SQL Statements
+ExecuteSQLAction_label=&Execute All
+ExecuteSQLAction_tooltip=Execute All SQL Statements
 
-ExecuteSelectionSQLAction.label=E&xecute Selected Text
-ExecuteSelectionSQLAction.tooltip=Execute Selected SQL Statements
+ExecuteSelectionSQLAction_label=E&xecute Selected Text
+ExecuteSelectionSQLAction_tooltip=Execute Selected SQL Statements
 
-RunAction.label=&Run...
-RunAction.tooltip=Run
+RunAction_label=&Run...
+RunAction_tooltip=Run
 
-RunAction.runError=Error occurred when executing RunAction
+RunAction_runError=Error occurred when executing RunAction
 
-DebugAction.label=&Debug...
-DebugAction.tooltip=Debug
-DebugAction.runError=Error occurred when executing DebugAction
+DebugAction_label=&Debug...
+DebugAction_tooltip=Debug
+DebugAction_runError=Error occurred when executing DebugAction
 
-ExplainSQLAction.label=&Get Execution Plan
-ExplainSQLAction.tooltip=Explain SQL Execution Plan
-ExplainSQLActionDelegate.error.initview=Failed to initialize SQL Execution Plan view:
-ExplainSQLActionDelegate.error.proc.qp=Error occurs when getting query plan for procedural object
+ExplainSQLAction_label=&Get Execution Plan
+ExplainSQLAction_tooltip=Explain SQL Execution Plan
+ExplainSQLActionDelegate_error_initview=Failed to initialize SQL Execution Plan view:
+ExplainSQLActionDelegate_error_proc_qp=Error occurs when getting query plan for procedural object
 
-ExecuteSQLActionDelegate.error.execute=Failed to execute SQL:
-ExecuteSQLActionDelegate.error.profile=Failed to get connection profile:
-ExecuteSQLActionDelegate.error.initview=Failed to initialize result view:
-ExecuteSQLActionDelegate.error.interrupted=The execution has been interrupted.
+ExecuteSQLActionDelegate_error_execute=Failed to execute SQL:
+ExecuteSQLActionDelegate_error_profile=Failed to get connection profile:
+ExecuteSQLActionDelegate_error_initview=Failed to initialize result view:
+ExecuteSQLActionDelegate_error_interrupted=The execution has been interrupted.
 
