--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -1,11 +1,11 @@
-SelectProfileDialog.title=Select Profile for the Editor
-SelectProfileDialog.create=C&reate...
-SelectProfileDialog.warning=Warning\!\n  The full feature of the editor will not be available without connection.
-SelectProfileDialog.error.jdbc.title=Connection Error
-SelectProfileDialog.profile.name=Connection profile &name:
-SelectProfileDialog.profile.type=Connection profile &type:
-SelectProfileDialog.donot.connect=&Do not connect now
-SelectProfileDialog.error.jdbc.message=Error occurred while trying to establish connection
-SelectProfileGroup.error.init=Error initializing SelectProfileGroup using: {0}
-SelectProfileDialog.noprofile=There is no connection profile associated with this resource. Select a connection profile type/name.
-SelectProfileDialog.wrongprofile=The connection profile (\"{0}\") associated with this resource is not valid. Select a connection profile type/name.
+SelectProfileDialog_title=Select Profile for the Editor
+SelectProfileDialog_create=C&reate...
+SelectProfileDialog_warning=Warning\!\n  The full feature of the editor will not be available without connection.
+SelectProfileDialog_error_jdbc_title=Connection Error
+SelectProfileDialog_profile_name=Connection profile &name:
+SelectProfileDialog_profile_type=Connection profile &type:
+SelectProfileDialog_donot_connect=&Do not connect now
+SelectProfileDialog_error_jdbc_message=Error occurred while trying to establish connection
+SelectProfileGroup_error_init=Error initializing SelectProfileGroup using: {0}
+SelectProfileDialog_noprofile=There is no connection profile associated with this resource. Select a connection profile type/name.
+SelectProfileDialog_wrongprofile=The connection profile (\"{0}\") associated with this resource is not valid. Select a connection profile type/name.
