--- a/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/preferences/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/preferences/messages.properties
@@ -1,1 +1,1 @@
-AbstractDBPreferenceFieldPage.nodb=Cannot find database name by id: {0} 
+AbstractDBPreferenceFieldPage_nodb=Cannot find database name by id: {0}
