--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
@@ -1,56 +1,69 @@
-plugin.internal_error=Internal error occurred
+plugin_internal_error=Internal error occurred
 
-RowsView.name=Name
-RowsView.errorWhenUpdate=Error during update of row in the row view
-GlobalVariablesLabelProvider.unknown=unknown
-DisconnectAction.label=&Disconnect
-DisconnectAction.fail=Fail
-DisconnectAction.disconnectFailInuse=Disconnect failed, connection in use
-DebugAttachAction.label=&Attach Client Connection
-DebugAttachAction.error=Error
-DebugAttachAction.attachFailMessage=Failed to attach and debug the connection
-DebugDetachAction.label=&Detach Client Connection
-RefreshAction.label=&Refresh Client Connections
-SPBreakpointPage.error=Error
-SPLaunchShortcut.error=Error
-SPBreakpointPage.errorSaving=Error saving breakpoint information
-SPLaunchShortcut.selectNotSP=The selection is not a stored procedure.
-SPLaunchShortcut.selectNotEnableEvent=Cannot run a disabled event handler, please enable it first.
-SPBreakpointPage.procedureName=Procedure Name:
-SPLineBreakpoint.invalidProcIdentifier=Invalid proc identifier 
-SPBreakpointPage.lineNumber=Line Number:
-SPDebugElement.notSupported=Not supported
-SPDebugTarget_Run.notSupported=Not supported
-SPBreakpointPage.enabledCondition=Enabled Condition
-SPBreakpointPropertiesRulerAction.label=Breakpoint Properties...
-SPBreakpointPage.failed.to.create.labels=failed to create labels
-SPBreakpointPage.failed.to.create.page=failed to create page
-SPBreakpointPage.enabled=Enabled
-SPLaunchShortcut.launchFailMessage=Launch failed: {0}
-SPLaunchShortcut.notStoreProcedure=Not a database object (store procedure) editor
-SPLocalVariable.threadNotSuspended=Thread not suspended
-ManageBreakpointRulerAction.label=Toggle Breakpoint
-ManageBreakpointRulerAction.error=Error
-ManageBreakpointRulerAction.fail=Failed to toggle breakpoint
-EnableDisableBreakpointRulerAction.enableBreakpoint=Enable Breakpoint
-EnableDisableBreakpointRulerAction.error=Error
-EnableDisableBreakpointRulerAction.enableFailed=Enable breakpoint failed
-EnableDisableBreakpointRulerAction.disableBreakpoint=Disable Breakpoint
-SPWatchExpressionDelegate.error=Watch evaluation error
-SPWatchExpressionDelegate.unsupported = {0} does not support watch fucntion
+RowsView_name=Name
+RowsView_errorWhenUpdate=Error during update of row in the row view
+GlobalVariablesLabelProvider_unknown=unknown
+DisconnectAction_label=&Disconnect
+DisconnectAction_fail=Fail
+DisconnectAction_disconnectFailInuse=Disconnect failed, connection in use
+DebugAttachAction_label=&Attach Client Connection
+DebugAttachAction_error=Error
+DebugAttachAction_attachFailMessage=Failed to attach and debug the connection
+DebugDetachAction_label=&Detach Client Connection
+RefreshAction_label=&Refresh Client Connections
+SPBreakpointPage_error=Error
+SPLaunchShortcut_error=Error
+SPBreakpointPage_errorSaving=Error saving breakpoint information
+SPLaunchShortcut_selectNotSP=The selection is not a stored procedure.
+SPLaunchShortcut_selectNotEnableEvent=Cannot run a disabled event handler, please enable it first.
+SPBreakpointPage_procedureName=Procedure Name:
+SPLineBreakpoint_invalidProcIdentifier=Invalid proc identifier
+SPBreakpointPage_lineNumber=Line Number:
+SPDebugElement_notSupported=Not supported
+SPDebugTarget_Run_notSupported=Not supported
+SPBreakpointPage_enabledCondition=Enabled Condition
+SPBreakpointPropertiesRulerAction_label=Breakpoint Properties...
+SPBreakpointPage_failed_to_create_labels=failed to create labels
+SPBreakpointPage_failed_to_create_page=failed to create page
+SPBreakpointPage_enabled=Enabled
+SPLaunchShortcut_launchFailMessage=Launch failed: {0}
+SPLaunchShortcut_notStoreProcedure=Not a database object (store procedure) editor
+SPLocalVariable_threadNotSuspended=Thread not suspended
+ManageBreakpointRulerAction_label=Toggle Breakpoint
+ManageBreakpointRulerAction_error=Error
+ManageBreakpointRulerAction_fail=Failed to toggle breakpoint
+EnableDisableBreakpointRulerAction_enableBreakpoint=Enable Breakpoint
+EnableDisableBreakpointRulerAction_error=Error
+EnableDisableBreakpointRulerAction_enableFailed=Enable breakpoint failed
+EnableDisableBreakpointRulerAction_disableBreakpoint=Disable Breakpoint
+SPWatchExpressionDelegate_error=Watch evaluation error
+SPWatchExpressionDelegate_unsupported = {0} does not support watch fucntion
 
-AbstractControlConnection.connection.already.being.debugged=Connection {0} is already being debugged
-AbstractControlConnection.invalid.store.procedure.description=Invalid store procedure description
+AbstractControlConnection_connection_already_being_debugged=Connection {0} is already being debugged
+AbstractControlConnection_invalid_store_procedure_description=Invalid store procedure description
 
-SPLaunchConfigurationDelegate.Launching=Launching
-SPLaunchConfigurationDelegate.UnsupportedServerType=Unsupported server type: 
-SPLaunchConfigurationDelegate.notsupported=This mode is not supported yet!
-SPLaunchConfigurationDelegate.CreatingClientConn=Creating client connection
-SPLaunchConfigurationDelegate.AttachingConn=Attaching to connection
-SPLaunchConfigurationDelegate.NoPermission=Cannot debug. Maybe you do not have enough permission.
-SPLaunchConfigurationDelegate.CreatingDebugger=Creating debugger
+SPLaunchConfigurationDelegate_Launching=Launching
+SPLaunchConfigurationDelegate_UnsupportedServerType=Unsupported server type:
+SPLaunchConfigurationDelegate_notsupported=This mode is not supported yet!
+SPLaunchConfigurationDelegate_CreatingClientConn=Creating client connection
+SPLaunchConfigurationDelegate_AttachingConn=Attaching to connection
+SPLaunchConfigurationDelegate_NoPermission=Cannot debug. Maybe you do not have enough permission.
+SPLaunchConfigurationDelegate_CreatingDebugger=Creating debugger
 
 
-perspective.DebuggerPerspective.activeWinNull1=Failed to change perspective, as the active window could not be retrieved
-perspective.DebuggerPerspective.activeWinNull2=Failed to change perspective, still the active window could not be retrieved
-perspective.DebuggerPerspective.changePerspectiveException=Failed to change perspective
+perspective_DebuggerPerspective_activeWinNull1=Failed to change perspective, as the active window could not be retrieved
+perspective_DebuggerPerspective_activeWinNull2=Failed to change perspective, still the active window could not be retrieved
+perspective_DebuggerPerspective_changePerspectiveException=Failed to change perspective
+
+SPVariable_unknown=unknown
+
+ToggleBreakpointAdapter_canToggleLineBreakpoints_title=Disable breakpoint toggling
+ToggleBreakpointAdapter_canToggleLineBreakpoints_message=Toggle breakpoint is disabled when editor is dirty
+ToggleBreakpointAdapter_canToggleLineBreakpoints_toggleMessage=Do not show this again
+
+AutoAttachUtil_information=Information
+AutoAttachUtil_auto_attach_for_profile=Auto attach for profile "
+AutoAttachUtil_enabled_by_system=" enabled by system
+
+ManageBreakpointRulerAction_exception_getControlConnection=Failed to get control connection
+
