Added the "toggle comment" feature

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -45,3 +45,7 @@ ExecuteSQLActionDelegate_error_profile=Failed to get connection profile:
 ExecuteSQLActionDelegate_error_initview=Failed to initialize result view:
 ExecuteSQLActionDelegate_error_interrupted=The execution has been interrupted.
 
+ToggleComment_error_title=Toggle Comment
+ToggleComment_error_message=An error occurred while toggling comments.
+
+
