Bug [141974] Can not create flatfile dataset with the attached flatfile

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -21,7 +21,7 @@ query_DO_NOT_SUPPORT_CROSS_TABLE_QUERY=Cross-table query is not supported.
 query_COMMAND_NOT_VALID=Query command is not valid.
 query_ARGUMENT_ERROR=The argument should be either 'NAME' or 'TYPE'.
 query_IO_EXCEPTION=An I/O Exception occurred when reading the file.
-query_SOURCE_DATA_ERROR=Source data error
+query_SOURCE_DATA_ERROR=Duplicate column names found in source data.
 query_COLUMN_NAME_ERROR=Column name error
 
 resultSet_COLUMN_NOT_FOUND=Column not found:
