Fix some accessibility related minor problems

--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/preference/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/preference/messages.properties
@@ -1,10 +1,10 @@
 ExecutionPlanPage.orientation.group.name=SQL Execution Plan View Orientation
-ExecutionPlanPage.vertical.orientation=Vertical orientation
+ExecutionPlanPage.vertical.orientation=&Vertical orientation
 ExecutionPlanPage.export.group=Export Encoding
-ExecutionPlanPage.default.enc=Default({0})
-ExecutionPlanPage.other.enc=Other:
-ExecutionPlanPage.horizontal.orientation=Horizontal orientation
-ExportFormatPage.fileencoding.otherencoding = Other:
+ExecutionPlanPage.default.enc=D&efault({0})
+ExecutionPlanPage.other.enc=O&ther:
+ExecutionPlanPage.horizontal.orientation=&Horizontal orientation
+ExportFormatPage.fileencoding.otherencoding = O&ther:
 ExportFormatPage.fileencoding.numDefaultEncodings = 6
 ExportFormatPage.fileencoding.defaultEncoding1 = ISO-8859-1
 ExportFormatPage.fileencoding.defaultEncoding2 = UTF-8
