--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -9,4 +9,4 @@ SelectProfileDialog_error_jdbc_message=Error occurred while trying to establish 
 SelectProfileGroup_error_init=Error initializing SelectProfileGroup using: {0}
 SelectProfileDialog_noprofile=There is no connection profile associated with this resource. Select a connection profile type/name.
 SelectProfileDialog_wrongprofile=The connection profile (\"{0}\") associated with this resource is not valid. Select a connection profile type/name.
-ConnectionInfoGroup_database_name=Database Name:
+ConnectionInfoGroup_database_name=Data&base Name:
