[148749] Provide accelerators in oda flatfile designer dialogs

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -14,11 +14,11 @@
 wizard.title.selectColumns=Select Columns
 wizard.defaultMessage.selectFolder=Select the folder that contains the flat files
 wizard.defaultMessage.selectFile=Select the file and the columns for the data set
-label.selectFolder=Select folder: 
-label.selectFile=Select file:
-label.fileFilter=File filter:
-label.includeTypeLine=Use second line as data type indicator
-label.selectCharset=Select charset:
+label.selectFolder=Select &folder: 
+label.selectFile=Select f&ile:
+label.fileFilter=File filte&r:
+label.includeTypeLine=Use second line as &data type indicator
+label.selectCharset=Select &charset:
 error.selectFolder=Please select a valid folder.
 error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
